--- a/appli.html
+++ b/appli.html
@@ -158,7 +158,7 @@ img {
 
 .card {
     flex: 0 0 var(--card-width);
-    min-height: 500px; /* Increase the minimum height of the card */
+    min-height: 500px; 
     border-radius: var(--border-radius);
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
